@@ -31,7 +31,7 @@ strong, b, .bold		{font-weight:bold; color:inherit;}
 	============================================= */
 .portal					{-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; display:table; width:100%; height:100%;}
 .main_wrap				{width:100%; min-width:1040px; padding:0px; display:table-cell; background-color:rgba(255,255,255,0.4);}
-#background_image	 	{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('/ctrack/art/mexico_background_image.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
+#background_image	 	{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('/ctrack/art/back/bf.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
 .overlay				{width:100%; height:100%; background-color:rgba(46,41,6,0.6); position:relative;}	/* Overlay colour for background image */
 iati-activity			{margin-bottom:40px;}	/* Fixes too-large bottom margin during only this instance */
 iati-activity:after 	{content:""; padding:0; display:initial;}	/* Takes away content since footer is included on site */
@@ -77,7 +77,7 @@ option					{color:#000;}
 
 /*	About data links
 	============================================= */
-a.about_data				{display:inline-block; vertical-align:bottom; padding:0 10px; text-align:center; color:#CCC; font-size:1.0em; line-height:1.2em;}
+a.about_data				{display:inline-block; vertical-align:bottom; padding:0 10px; text-align:center; color:#DDD; font-size:1.0em; line-height:1.2em;}
 a.about_data:hover			{color:#FFF;}
 a.about_data.quality		{border-left:1px solid #CCC; text-align:right; padding-right:0;}
 a.about_data.registry_link	{border-right:1px solid #CCC; text-align:left;}
@@ -230,17 +230,17 @@ a.map_percent span		{display:inline; font-size:1.15em; line-height:1.0em; color:
 .stats_wrap				{width:100%; margin:0 auto; padding:40px 0; padding-top:0px;}
 span.stats_title		{display:block; font-size:1.5em; color:#FFF; padding-bottom:10px;}
 span.stats_title.view	{display:inline-block; font-size:1.0em; color:#FFF; margin-left:20px; vertical-align:bottom; text-align:left; padding:0;} /* Table view */
-span.stats_num			{display:block; font-size:8.0em; color:#42acff;}
-span.stats_num.small	{display:block; font-size:4.0em;}
-span.stats_num.view		{display:inline-block; font-size:2.9em; color:#FFF; line-height:0.8em;} /* Table view */
-.declare.stats			{width:960px; margin:0 auto; color:#ccc; font-size:1.0em; line-height:1.4em; text-align:right;}
+span.stats_num			{display:block; font-size:100px; color:#42acff;}
+span.stats_num.small	{display:block; font-size:52px;}
+span.stats_num.view		{display:inline-block; font-size:168px; color:#FFF; line-height:0.8em;} /* Table view */
+.declare.stats			{width:960px; margin:0 auto; color:#ccc; font-size:1.0em; line-height:1.4em; text-align:right;}	/* Date under stats */
 
 a.stats_link			{display:block; padding:30px 40px; height:100%; color:#ccc; border-radius:6px; background-color:rgba(0,14,32,0.7); margin:15px 5px 5px 10px;}
 a.stats_link.active		{margin-left:0; padding:40px;}
 a.stats_link.total, a.stats_link.publishers		{margin-right:0;}
 a.stats_link.planned, a.stats_link.publishers	{margin-top:10px;}
 a.stats_link:hover			{background-color:rgba(0,14,32,0.9);}
-a.stats_link.missing		{margin-left:0;}
+a.stats_link.missing		{margin-left:0; font-size:18px;}
 a.stats_link.missing span	{color:#008FFF;}
 
 
