@@ -111,7 +111,7 @@ a.stats_link.missing span	{color:rgba(255,163,0,1);}
 /*	Data Description styles
 	============================================= */
 .description_wrap		{background:linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 60%,rgba(0,0,0,1) 100%); background:-prefix-linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 50%,rgba(0,0,0,1) 100%);}
-.description			{background-color:rgba(255,255,255,0.1);}
+.description.data_quality_wrap	{background-color:rgba(255,255,255,0.1);}
 .description span.title	{color:rgba(255,255,255,1); border-bottom:1px solid rgba(255,255,255,1);}
 .description p			{color:rgba(255,255,255,1);}
 .description a			{color:rgba(204,204,204,1);}
