@@ -152,7 +152,7 @@ a.stats_link.missing span	{color:var(--base11);}
 /*	Data Description styles
 	============================================= */
 .description_wrap		{background:linear-gradient(to bottom, var(--base05_00) 0%,var(--base05_70) 60%,var(--base05) 100%); background:-prefix-linear-gradient(to bottom, var(--base05_00) 0%,var(--base05_70) 50%,var(--base05) 100%);}
-.description			{background-color:var(--base15_10);}
+.description.data_quality_wrap	{background-color:var(--base15_10);}
 .description span.title	{color:var(--base15); border-bottom:1px solid var(--base15);}
 .description p			{color:var(--base15);}
 .description a			{color:var(--base14);}
