@@ -13,7 +13,7 @@
 
 #data_quality
 <div class="description_wrap">
-	<div class="description">
+	<div class="description data_quality_wrap">
 		<span class="title">{data_title_text}</span>
 		<p>{data_paragraph1_text}</p>
 		<p>{data_paragraph2_text}</p>
