@@ -1,3 +1,10 @@
+Development Portal (2018-03-19 shi)
+==============================
+Update stats css
+Update registry link into chunk
+Fix all theme background colours for data_quality page
+
+
 Development Portal (2018-03-18 shi)
 ==============================
 Update Dash css
